<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="total_entries">Total:</string>
    <string name="total_movies">Movies: </string>
    <string name="total_games">Games: </string>
    <string name="total_books">Books: </string>
    <string name="total_documentaries">Documentaries: </string>
    <string name="no_data_found">No data found</string>
    <string name="filter_actual_title">Filter Actual</string>
</resources>
